--- a/d3js.html
+++ b/d3js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" IE="edge">
     <title>d3.js jlucktay</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -50,7 +50,7 @@
 
       </header>
       <section>
-
+<h3>Here's a clock</h3>
 <div id="credit">Inspired by <a href="http://blog.pixelbreaker.com/polarclock/">pixelbreaker</a>.</div>
 <script src="http://d3js.org/d3.v3.js"></script>
 <script>
