--- a/d3js.html
+++ b/d3js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>d3.js jlucktay</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
