--- a/d3js.html
+++ b/d3js.html
@@ -29,7 +29,9 @@
 
       <div id="credit">
         Inspired by <a href="http://blog.pixelbreaker.com/polarclock/">pixelbreaker</a>.
-      </div><script src="http://d3js.org/d3.v3.js"></script> <script>
+      </div>
+      <script src="http://d3js.org/d3.v3.js"></script>
+      <script>
         var width = 960,
           height = 800,
           radius = Math.min(width, height) / 1.9,
@@ -131,11 +133,20 @@
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
-  <script type="text/javascript">
-    try {
-      var pageTracker = _gat._getTracker("UA-59953582-1");
-      pageTracker._trackPageview();
-    } catch (err) {}
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments);
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m);
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-59953582-1', 'auto');
+    ga('send', 'pageview');
   </script>
 </body>
 </html>
