--- a/d3js.html
+++ b/d3js.html
@@ -40,10 +40,11 @@
     </header>
 
     <section>
-      <h3>Here's a clock</h3>
+      <h3>What a weird looking clock</h3>
 
       <div id="credit">
-        Inspired by <a href="http://blog.pixelbreaker.com/polarclock/">pixelbreaker</a>.
+        <p>Hello Natalie, I got that D3JS stuff working, so here you go.</p>
+        <p>Inspired by <a href="http://blog.pixelbreaker.com/polarclock/">pixelbreaker</a>.</p>
       </div>
       <script src="http://d3js.org/d3.v3.js"></script>
       <script>
